# rfc-errata

./: pyproject.toml
.github/workflows/: checks.yml
Rfc_Errata/: test.py
